--- a/style.css
+++ b/style.css
@@ -4,15 +4,25 @@
     padding: 0;
 }
 body{
-    font-family: sans-serif;
+    background: linear-gradient(to bottom right, #f2f2f2, #e0e0ff);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
-    padding: 20px;
+    padding: 40px;
     background-color: #f9f9f9;
     color: #333;
 }
 
+
 header, section, footer{
     margin-bottom: 30px;
+}
+header{
+    text-align: center;
+    padding-bottom: 20px;
+    border-bottom: 2px solid #ccc;
+}
+section{
+    margin-top: 40px;
 }
 
 h1, h2{
@@ -30,3 +40,40 @@ button:hover{
     background: #0056b3;
 }
 
+.proyecto {
+    background: white;
+    border:  1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0, 1);
+}
+.proyecto h3 {
+    margin-bottom: 5px;
+}
+
+a{
+    color: #007bff;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+@media (max-width: 600px) {
+    body{
+        padding: 20px;
+    }
+    h1 {
+        font-size: 24px;
+    }
+    .proyecto {
+        padding: 10px;
+    }
+
+    button {
+        width: 100%;
+    }
+    
+}
